# emitter-research-app

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/prompts/: candidate_selection.txt  scope_categories.md  system_prompt.txt
backend/app/routers/: export.py  process.py  resolve.py  rows.py  upload.py
backend/app/services/: calculator.py  candidate_retriever.py  dataset_store.py  embedding_builder.py  llm_orchestrator.py  output_builder.py  template_parser.py  validator.py
backend/scripts/: build_index.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/Controls/: ProcessButton.tsx
frontend/src/components/Grid/: InputGrid.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/components/Resolution/: AmbiguityPanel.tsx
frontend/src/components/Results/: ResultsTable.tsx
frontend/src/components/Upload/: FileUpload.tsx
frontend/src/store/: index.ts
